fixing spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -493,6 +493,10 @@
   margin: auto;
 }
 
+  .editpage {
+    padding: 5px;
+  }
+
 input {
   background-color: rgba(0, 0, 0, 0);
   border-style: solid;
